Agentforce/force-app/main/default/objects/Queue_Assignment_Settings__mdt/Queue_Assignment_Settings__mdt.object-meta.xml
<CustomObject>
    <description>AD-1012 - Add configuration to store the Country/Corporate Type assignment. This replicates the standard lead assignment functionality to be expanded to other objects.</description>
    <label>Queue Assignment Setting</label>
    <pluralLabel>Queue Assignment Settings</pluralLabel>
</CustomObject>