Agentforce/force-app/main/default/objects/Queue_Assignment_Settings__mdt/fields/Corporate_Type__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Type__c</fullName>
    <description>AD-1012 - Stores the Corporate Type to be matched against this Queue Assignment. Note that Global Value Sets are not supported at the time of creation.</description>
    <label>Corporate Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facilities</fullName>
                <default>true</default>
                <label>Facilities</label>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>