Agentforce/force-app/main/default/objects/Queue_Assignment_Settings__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>AD-1012 - Stores the Country against the Queue Assignment record</description>
    <label>Country</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>