Agentforce/force-app/main/default/objects/Queue_Assignment_Settings__mdt/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <description>AD-1012 - Stores the Developer name of the matching Queue that a record can be assigned to.</description>
    <label>Queue Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>