Agentforce/force-app/main/default/objects/Queue_Assignment_Settings__mdt/listViews/All_Queues.listView-meta.xml
<ListView>
    <fullName>All_Queues</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Corporate_Type__c</columns>
    <columns>Country__c</columns>
    <columns>Queue_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Queues</label>
</ListView>